cron schedule at 1AM, 8AM, 10AM, 12PM, 2PM , 5PM, 7PM, 10PM

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,7 +2,7 @@ name: Run Python script
 
 on:
   schedule:
-    - cron: '*/1 * * * *'
+    - cron: '30 19,2,4,6,8,11,13,16 * * *'
 
 jobs:
   build:
