--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,6 +18,6 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install requests pandas lxml
+        pip install requests pandas lxml html5lib
     - name: Run script
       run: python fii/fpi-sectore-invest-nsdl-trial.py
